add new routes, update swagger
